--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
+    "react-slick": "^0.30.2",
     "reactstrap": "^9.2.2",
-    "remixicon": "^4.2.0"
+    "remixicon": "^4.2.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
